--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -33,7 +33,7 @@
       "bg_alignment": "fill contained",
       "frontpage_collection_layout": "auto",
       "products_per_row": "3",
-      "use_logo": false,
+      "use_logo": true,
       "use_favicon": false,
       "use_bg_image": false,
       "display_search": true,
