--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,5 +1,73 @@
 {
-  "current": "Red and black",
+  "current": {
+    "customer_layout": "theme",
+    "shop_bg_color": "#ffffff",
+    "border_color": "#dddddd",
+    "nav_link_color": "#888888",
+    "body_font_color": "#555555",
+    "header_color": "#333333",
+    "link_color": "#f45b4f",
+    "slide_1_link": "/collections/all",
+    "slide_2_link": "/collections/all",
+    "slide_3_link": "",
+    "slide_4_link": "",
+    "footer_blog_post_header": "News",
+    "footer_linklist_title": "Quick Links",
+    "footer_newsletter_title": "Newsletter",
+    "mailing_list_form_action": "",
+    "footer_social_title": "Follow Us",
+    "twitter_link": "http://twitter.com/shopify",
+    "facebook_link": "http://facebook.com/shopify",
+    "google_link": "",
+    "youtube_link": "",
+    "vimeo_link": "",
+    "pinterest_link": "",
+    "instagram_link": "",
+    "tumblr_link": "",
+    "atom_link": "",
+    "logo_alignment": "left",
+    "base_font": "Helvetica, Arial, sans-serif",
+    "header_font": "Google+Cabin",
+    "bg_alignment": "fill contained",
+    "frontpage_collection_layout": "grid",
+    "products_per_row": "4",
+    "use_logo": true,
+    "use_favicon": false,
+    "use_bg_image": false,
+    "display_search": false,
+    "slide_1": false,
+    "slide_2": false,
+    "slide_3": false,
+    "slide_4": false,
+    "enable_product_image_zoom": true,
+    "display_quantity_dropdown": true,
+    "show_related_products": true,
+    "collection_tags": true,
+    "footer_display_blog": false,
+    "footer_display_navigation": false,
+    "footer_display_newsletter": false,
+    "footer_display_social": false,
+    "accept_visa": true,
+    "accept_mastercard": true,
+    "accept_amex": true,
+    "accept_discover": true,
+    "accept_paypal": true,
+    "accept_google": false,
+    "accept_bitcoin": false,
+    "slide_1_alt": "",
+    "slide_2_alt": "",
+    "slide_3_alt": "",
+    "slide_4_alt": "",
+    "pagination_limit": "16",
+    "enable_featuredproduct": "true",
+    "display_slide_1": "false",
+    "display_slide_2": "false",
+    "display_slide_3": "false",
+    "display_slide_4": "false",
+    "enable_slideshowbanner": "true",
+    "frontpage_collection": "",
+    "homepage": ""
+  },
   "presets": {
     "Red and black": {
       "customer_layout": "theme",
